2012-01-08 Pierre Wieser <pwieser@trychlos.org>

	Rather call parent_class::instance_constructed() method before executing
	the derived class one.

	* src/nact/nact-tree-view.c (instance_constructed):
	* src/plugin-menu/nautilus-actions.c (instance_constructed):
	Call parent class on the beginning of the function.

	* src/nact/base-iunique.c:
	* src/nact/base-iunique.h: New BaseIUnique interface.

	* src/nact/Makefile.am: Updated accordingly.

2012-01-06 Pierre Wieser <pwieser@trychlos.org>

	* configure.ac: Now requires gtk-doc >= 1.16.

	* src/nact/base-application.c:
	* src/nact/base-application.h (base_application_run):
	Take argc, argv as function arguments.
	Define 'code' as a property.

	* src/nact/main.c b/src/nact/main.c (main):
	* src/nact/nact-application.c (appli_manage_options): Updated accordingly.

2012-01-05 Pierre Wieser <pwieser@trychlos.org>

	* src/nact/nact-tree-ieditable.c:
	* src/nact/nact-tree-ieditable.h (nact_tree_ieditable_set_items): New function.

	* src/nact/nact-assistant-import.c (assistant_apply):
	* src/nact/nact-tree-model-dnd.c (drop_uri_list): Updated accordingly.

	* src/core/na-importer.c (manage_import_mode):
	Release the duplicated object which has been cancelled by the user.

	* src/core/na-icontext-factory.c:
	* src/core/na-iduplicable.c:
	* src/core/na-object-action-factory.c:
	* src/core/na-object-action.c:
	* src/core/na-object-id-factory.c:
	* src/core/na-object-item-factory.c:
	* src/core/na-object-menu-factory.c: Add/fix comments.

	* src/core/na-export-format.h: Remove IPREFS_EXPORT_ definitions from here.

	* src/core/na-exporter.c:
	* src/core/na-exporter.h (na_exporter_get_export_format): New function.

	* src/core/na-iprefs.c:
	* src/core/na-iprefs.h
	(na_iprefs_get_export_format, na_iprefs_set_export_format): Removed functions.

	* src/nact/nact-assistant-export.c
	(on_base_initialize_base_window, assist_prepare_confirm, assist_prepare_exportdone):
	* src/nact/nact-clipboard.c (export_row_object):